# anomaflow

./: .gcloudignore  .gitignore  README.md  makefile  metrics.json.schema
cloud-build/: cloudbuild.yaml  run.yaml
data/input/: anomaly.json  normal-10.json
docker/: .dockerignore  Dockerfile
images/: mermaid-flow-1x.png:Zone.Identifier
python/: .dockerignore  .gcloudignore  README.md  pyproject.toml  requirements.txt
python/anomaflow/: pipeline.py  pipeline_stream.py  test_pipeline.py
terraform/: artifact_registry.tf  bindplane.tf  main.tf  terraform.tfvars.templ  variables.tf
terraform/bootstrap/: main.tf  variables.tf
